# factor-zoo

./: .gitignore  README.md  pyproject.toml  run.sh
docs/superpowers/specs/: 2026-04-30-factorzoo-v020-design.md  2026-05-01-factorzoo-v030-design.md
factor_zoo/: __init__.py  api.py  app.py  cli.py
factor_zoo/analytics/: cluster.py  correlation.py  decay.py  exposure.py  portfolio.py  quintiles.py  replication.py  stats.py
factor_zoo/data/: loader.py  remote.py  schema.sql  store.py
factor_zoo/pages/: 1_Browse.py  2_Detail.py  3_Compare.py  4_Decay.py  5_Portfolio.py  6_Exposure.py  7_Clustering.py  8_Zoo_Summary.py
scripts/: build_db.py
tests/: conftest.py  test_api.py  test_cache.py  test_cluster.py  test_decay.py  test_exposure.py  test_loader_quintiles.py  test_portfolio.py  test_quintiles.py  test_replication.py  test_stats.py  test_store_quintiles.py
