[project]
name = "factorzoo"
version = "0.2.0"
description = "Factor Zoo — evaluate, compare, and screen 200+ published equity factors"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["finance", "factor-investing", "asset-pricing", "quant", "equity-factors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "openassetpricing>=0.0.2",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "click>=8.1.0",
]

[project.scripts]
factorzoo = "factor_zoo.cli:app"

[project.urls]
Homepage = "https://github.com/michaelsun/factorzoo"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factor_zoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
